fix instagram image

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             
             <div class="item insta">
                 <a href = "https://instagram.com/" target="_blank"></a>
-                    <img src="/images/instagram.svg"></a>
+                    <img src="images/instagram.svg"></a>
             </div>
 
             <div class="item"></div>
